# aws-realtime-cost-mcp

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/aws_realtime_cost_mcp/: __init__.py  aggregator.py  auth.py  cloudwatch.py  coverage.py  pricing.py  server.py
src/aws_realtime_cost_mcp/estimators/: __init__.py  base.py  bedrock.py  ec2.py  nat.py  rds.py  sagemaker.py
stacksets/: reader-role.yaml
tests/: conftest.py  test_aggregator.py  test_aggregator_extra.py  test_auth.py  test_cloudwatch.py  test_coverage.py  test_estimators_base.py  test_estimators_bedrock.py  test_estimators_ec2.py  test_estimators_nat.py  test_estimators_rds.py  test_estimators_sagemaker.py  test_pricing.py  test_server.py
