[project]
name = "aws-realtime-cost-mcp"
version = "0.1.0"
description = "MCP server for near real-time AWS cost estimates via service APIs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
    "boto3>=1.34",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "moto[ec2,sts,rds,sagemaker,cloudwatch]>=5.0",
]

[project.scripts]
aws-realtime-cost-mcp = "aws_realtime_cost_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aws_realtime_cost_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: tests that hit a real AWS account (run from e2e/, not tests/)",
]
addopts = [
    "--strict-markers",
    "--cov=aws_realtime_cost_mcp",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-branch",
    "--cov-fail-under=100",
]

[tool.coverage.run]
source = ["src/aws_realtime_cost_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
skip_covered = false
